@@ -1,3 +1,7 @@
+2013-05-03  Jakub Jelinek  <jakub@redhat.com>
+
+	* src/prelink.h (R_390_IRELATIVE): Define if not defined.
+
 2013-04-25  Jakub Jelinek  <jakub@redhat.com>
 
 	* src/arch-s390.c (s390_adjust_rela, s390_prelink_rela,
